fix scrollbar

--- a/react-app/src/components/CartModal/Cart.css
+++ b/react-app/src/components/CartModal/Cart.css
@@ -23,6 +23,7 @@
 .cartUser {
   overflow: scroll;
   margin-right: 20px;
+  overflow-y: hidden;
 }
 
 .cartImg:hover {
